# TheGameEngine

./: .gitignore  CMakeLists.txt  Makefile  SimpleVertexShader.vertexshader  hello-opengl.cpp  run
src/: CMakeLists.txt  TGEengine.cpp  TGEengine.hpp  TGEgame.cpp  TGEgame.hpp  TGEobject.cpp  TGEobject.hpp  TGEwindowManager.cpp  TGEwindowManager.hpp
src/Cameras/: CMakeLists.txt  TGEcamera.cpp  TGEcamera.hpp  TGEperspectiveCamera.cpp  TGEperspectiveCamera.hpp
src/IO/: CMakeLists.txt  TGEfiles.cpp  TGEfiles.hpp
src/Objects/: CMakeLists.txt  TGEgameObject.cpp  TGEgameObject.hpp  TGEmesh.cpp  TGEmesh.hpp  TGEobject.cpp  TGEobject.hpp  TGEroot.cpp  TGEroot.hpp
src/Shaders/: CMakeLists.txt  TGEbuiltInShaders.cpp  TGEbuiltInShaders.hpp  TGEloadShaders.cpp  TGEloadShaders.hpp  TGEshader.cpp  TGEshader.hpp
src/Shaders/ShaderFiles/: Simple.vertexshader
tester-app/: Makefile  mygame.cpp  run
tester-app-whatever/: Makefile  mygame-procedural.cpp  run
tutorials/: hello-opengl.cpp  run
